# Vocalie-TTS

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  audio_defaults.py  conftest.py  docker-compose.yml  gilles  lexique_tts_fr.json  logging_utils.py  openapi.json  output_paths.py  pyproject.toml  pytest.ini  refs.py  requirements-audiosr.in  requirements-audiosr.lock.txt  requirements-bark.txt  requirements-chatterbox.lock.txt  requirements-chatterbox.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt  security_best_practices_report.md  session_manager.py  state_manager.py  text_tools.py  tts_engine.py  tts_pipeline.py  tts_test.py  tts_thomcles_fr.py  ui-base.css
.github/: pull_request_template.md
backend/: app.py  config.py  rate_limit.py  security.py  state.py
backend_install/: installer.py  manifests.py  paths.py  status.py
docker/: entrypoint.sh  install-venvs.sh
docs/: ACTIVITY_LOG.md  AUDIT_STATUS.md  CONTEXT.compact.md  CONTEXT.md  CONVENTIONS.md  DECISIONS.md  ENV_POLICY.md  GLOSSARY.md  INDEX.md  NEW-MODELS-INTEGRATION-PLAN.md  SESSION.md  architecture.md  invariants.md  security-runbook.md  system-boundaries.md
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
presets/: example.json
reports/: code-janitor-20260527-1628.md
scripts/: bootstrap.sh  check-rate-limit-fairness.py  check-security-baseline.sh  dev-backend.sh  dev-frontend.sh  dev-macos.sh  dev-windows.ps1  dev.sh  doctor.sh  gen-lock-linux.sh  stop.sh  (+12 more)
(+179 files in other folders)
